--- a/index.html
+++ b/index.html
@@ -7,54 +7,18 @@
 </head>
 
 <body>
-  <h1>This is the matplotlib activity. In this case, we solved the homework with Jupyter Notebook.</h1>
-  <p>My favorite image is: <br />
-    <img src="http://pm1.narvii.com/7635/8aa4103872e98eeabfc88932f76503b858b47042r1-1920-1080v2_uhq.jpg" width="1200"
+  <h1>Matplotlib challenge!</h1>
+    https://www.google.com/search?q=python+image&sxsrf=ALeKk03KOtcarbzwR57U68CIqPM9KYxDBw:1622161850095&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjM6N7mj-vwAhUHIqwKHX-lCfkQ_AUoAXoECAEQAw&biw=1536&bih=754#imgrc=XmmuGvoln--UuM" width="1200"
       height="600" />
+  <p>
+    This is the matplotlib activity. In this case, we solved the homework with Jupyter Notebook
   </p>
   <p>
-    I am 24 and I live in Mexico City. My family consists of my brother and parents. I have a lovely girlfriend whose
-    name is Eva.
+    It is pure science.
   </p>
-  <p>
-    Currently I work at Infosys.
-  </p>
-  <ul>
-    <li><strong>Facebook</strong>: <a href="https://www.facebook.com" target="_blank">Link to Facebook</a></li>
-    <li><strong>Twitter</strong>: <a href="https://www.twitter.com" target="_blank">Link to Twitter</a></li>
-    <li><strong>Gmail</strong>: <a href='#'>carlos.hdezor@gmail.com</a></li>
-  </ul>
-
-  <table border="1">
-    <tr>
-      <th>Movies</th>
-      <th>Song</th>
-      <th>Food</th>
-    </tr>
-    <tr>
-      <td>
-        Batman
-      </td>
-      <td>
-        Levitating
-      </td>
-      <td>
-        Pizza
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Superman
-      </td>
-      <td>
-        Cool
-      </td>
-      <td>
-        Hamburger
-      </td>
-    </tr>
-  </table>
+  <img src="https://www.google.com/search?q=matplotlib&tbm=isch&ved=2ahUKEwjotoToj-vwAhUIa60KHTKoD6MQ2-cCegQIABAA&oq=matplotlib&gs_lcp=CgNpbWcQAzIECAAQQzIECAAQQzIECAAQQzICCAAyAggAMgIIADICCAAyAggAMgIIADICCAA6BQgAELEDOgcIABCxAxBDOggIABCxAxCDAVCHvQVYiscFYNPIBWgAcAB4AIABbIgBtAeSAQM3LjOYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=vDmwYOjoMIjWtQWy0L6YCg&bih=754&biw=1536#imgrc=YqWkXVSTfyzsRM" width="1200"
+      height="600" />
 </body>
-<a href="https://github.com/carlos-hernandezortiz">Link to my first Github</a>
+
 
 </html>
