--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>Matplotlib challenge!</h1>
-    https://www.google.com/search?q=python+image&sxsrf=ALeKk03KOtcarbzwR57U68CIqPM9KYxDBw:1622161850095&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjM6N7mj-vwAhUHIqwKHX-lCfkQ_AUoAXoECAEQAw&biw=1536&bih=754#imgrc=XmmuGvoln--UuM" width="1200"
+    <img src="https://www.google.com/search?q=python+image&sxsrf=ALeKk03KOtcarbzwR57U68CIqPM9KYxDBw:1622161850095&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjM6N7mj-vwAhUHIqwKHX-lCfkQ_AUoAXoECAEQAw&biw=1536&bih=754#imgrc=XmmuGvoln--UuM" width="1200"
       height="600" />
   <p>
     This is the matplotlib activity. In this case, we solved the homework with Jupyter Notebook
