--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>Matplotlib challenge!</h1>
-    <img src="https://www.google.com/search?q=python+image&sxsrf=ALeKk03KOtcarbzwR57U68CIqPM9KYxDBw:1622161850095&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjM6N7mj-vwAhUHIqwKHX-lCfkQ_AUoAXoECAEQAw&biw=1536&bih=754#imgrc=XmmuGvoln--UuM" width="1200"
+   <img src="http://pm1.narvii.com/7635/8aa4103872e98eeabfc88932f76503b858b47042r1-1920-1080v2_uhq.jpg" width="1200"
       height="600" />
   <p>
     This is the matplotlib activity. In this case, we solved the homework with Jupyter Notebook
@@ -16,7 +16,7 @@
   <p>
     It is pure science.
   </p>
-  <img src="https://www.google.com/search?q=matplotlib&tbm=isch&ved=2ahUKEwjotoToj-vwAhUIa60KHTKoD6MQ2-cCegQIABAA&oq=matplotlib&gs_lcp=CgNpbWcQAzIECAAQQzIECAAQQzIECAAQQzICCAAyAggAMgIIADICCAAyAggAMgIIADICCAA6BQgAELEDOgcIABCxAxBDOggIABCxAxCDAVCHvQVYiscFYNPIBWgAcAB4AIABbIgBtAeSAQM3LjOYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=vDmwYOjoMIjWtQWy0L6YCg&bih=754&biw=1536#imgrc=YqWkXVSTfyzsRM" width="1200"
+  <img src="https://matplotlib.org/stable/_static/logo2_compressed.svg" width="1200"
       height="600" />
 </body>
 
